deps/v8/test/message/fail/class-spread-property.out
*%(basename)s:5: SyntaxError: Unexpected token '...'
class C { ...[] }
          ^^^
SyntaxError: Unexpected token '...'
